force-app/main/default/objects/Warship_Supply__c/Warship_Supply__c.object-meta.xml
<CustomObject>
    <label>Warship_Supply</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Warship_Supply  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WarshipSupplies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>