force-app/main/default/objects/Warship_Supply__c/fields/Ship_supply__c.field-meta.xml
<CustomField>
    <fullName>Ship_supply__c</fullName>
    <label>Ship</label>
    <referenceTo>Warship__c</referenceTo>
    <relationshipName>Warship_Supplies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>