force-app/main/default/objects/Warship_Supply__c/fields/Supply__c.field-meta.xml
<CustomField>
    <fullName>Supply__c</fullName>
    <label>Supply</label>
    <referenceTo>Supply__c</referenceTo>
    <relationshipName>Warship_Supplies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>