force-app/main/default/objects/Warship_Supply__c/fields/Supply_Name__c.field-meta.xml
<CustomField>
    <fullName>Supply_Name__c</fullName>
    <formula>Supply__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supply Name</label>
    <type>Text</type>
</CustomField>