force-app/main/default/objects/Warship_Supply__c/fields/warship_Name__c.field-meta.xml
<CustomField>
    <fullName>warship_Name__c</fullName>
    <formula>Ship_supply__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>warship_Name</label>
    <type>Text</type>
</CustomField>