force-app/main/default/objects/Warship_Supply__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Ship_supply__c</columns>
    <columns>Supply__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>